- Use Task.Input when reading options from files - Support root module usage - Added test for --use-version